--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Random Quote Generator</title>
 </head>
 <body>
+    <div id="main-title">
+        <h1>Random Quote Generator</h1>
+    </div>
     
 </body>
 </html>
