added a button to get a new quote

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <div id="main-title">
         <h1>Random Quote Generator</h1>
     </div>
+    <div>
+        <button type="submit" id="get-quote-btn">New Quote</button>
+    </div>
     
 </body>
 </html>
