added html for quote text

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <div id="main-title">
         <h1>Random Quote Generator</h1>
     </div>
+    <div id="quote-container">
+        <blockquote id="quote"></blockquote>
+    </div>
     <div>
         <button type="submit" id="get-quote-btn">New Quote</button>
     </div>
-    
+    <script src="scripts/my-script.js"
 </body>
 </html>
