--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <div>
         <button type="submit" id="get-quote-btn">New Quote</button>
     </div>
-    <script src="scripts/my-script.js"
+    <script src="scripts/my-script.js"></script>
 </body>
 </html>
