added placeholder for author in html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     </div>
     <div id="quote-container">
         <blockquote id="quote"></blockquote>
+        <div id="author-container">
+            <p id="author"></p>
+        </div>
     </div>
     <div>
         <button type="submit" id="get-quote-btn">New Quote</button>
