added font awesome tweet button

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Random Quote Generator</title>
+    <!-- font awesome -->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
+
 </head>
 <body>
     <div id="main-title">
@@ -18,6 +21,12 @@
     </div>
     <div>
         <button type="submit" id="get-quote-btn">New Quote</button>
+    </div>
+    <div id="tweet-btn-container">
+        <a class="button" id="tweet-btn" title="Tweet this quote!" target="_blank">
+            <i class="fab fa-twitter"></i>
+        </a>
+        
     </div>
     <script src="scripts/my-script.js"></script>
 </body>
