--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
     <!-- bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+    <!-- my-styles -->
+    <link href="styles/my-styles.css" rel="stylesheet">
 </head>
 <body>
 <div class="jumbotron text-center">
