renamed Generator to Machine

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Random Quote Generator</title>
+    <title>Random Quote Machine</title>
     <!-- font awesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
      <!-- Bootstrap CSS -->
@@ -15,7 +15,7 @@
 <body>
 <div class="jumbotron text-center">
     <div id="main-title">
-        <h1>Random Quote Generator</h1>
+        <h1>Random Quote Machine</h1>
     </div>
     <div id="quote-container">
         <blockquote id="quote"></blockquote>
