Increased size of tweet button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div id="tweet-btn-container">
         <a class="button" id="tweet-btn" title="Tweet this quote!" target="_blank">
-            <i class="fab fa-twitter"></i>
+            <i class="fab fa-twitter fa-lg"></i>
         </a>
         
     </div>
