--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Random Quote Machine</title>
     <!-- font awesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Parisienne" rel="stylesheet">
      <!-- Bootstrap CSS -->
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
      <!-- my-styles -->
