--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,38 +10,47 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto|Tillana" rel="stylesheet">
-     <!-- Bootstrap CSS -->
-     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-     <!-- my-styles -->
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
+    <!-- my-styles -->
     <link href="styles/my-styles.css" rel="stylesheet">
 </head>
+
 <body>
-<div class="jumbotron text-center">
-    <div class="container">
-    <div class="row" id="main-title">
-        <h1>Random Quote Machine</h1>
-    </div>
-    <div id="quote-container">
-        <blockquote class="blockquote blockquote-reverse" id="quote"></blockquote>
-        <div id="author-container">
-            <p id="author"></p>
+    <div class="container-fluid">
+        <div class="row" id="main-title">
+            <div class="col-md-6">
+                <h1>Random Quote Machine</h1>
+            </div>
+        </div>
+        <div id="quote-container">
+            <blockquote class="blockquote blockquote-reverse" id="quote"></blockquote>
+            <div id="author-container">
+                <p id="author"></p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" id="tweet-btn-container">
+                <a class="button" id="tweet-btn" title="Tweet this quote!" target="_blank">
+                    <i class="fab fa-twitter fa-3x"></i>
+                </a>
+            </div>
+            <div class="col">
+                <button type="submit" id="get-quote-btn" class="btn-primary float-right">New <i class="fas fa-arrow-right"></i>
+                </button>
+            </div>
         </div>
     </div>
-    <div>
-        <button type="submit" id="get-quote-btn">New Quote</button>
-    </div>
-    <div id="tweet-btn-container">
-        <a class="button" id="tweet-btn" title="Tweet this quote!" target="_blank">
-            <i class="fab fa-twitter fa-lg"></i>
-        </a>
-    </div>
-</div>
-</div>
- <!-- jQuery first, then Popper.js, then Bootstrap JS -->
- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
- <script src="scripts/data.js"></script>
- <script src="scripts/my-script.js"></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+    <script src="scripts/data.js"></script>
+    <script src="scripts/my-script.js"></script>
 </body>
+
 </html>
