--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row" id="main-title">
             <div class="col-md-6">
                 <h1>Random Quote Machine</h1>
