--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <div class="container">
         <div class="row" id="main-title">
-            <div class="col-md-6">
+            <div class="col">
                 <h1>Random Quote Machine</h1>
             </div>
         </div>
@@ -33,11 +33,11 @@
         <div class="row">
             <div class="col" id="tweet-btn-container">
                 <a class="button" id="tweet-btn" title="Tweet this quote!" target="_blank">
-                    <i class="fab fa-twitter fa-3x"></i>
+                    <i class="fab fa-twitter fa-2x"></i>
                 </a>
             </div>
             <div class="col">
-                <button type="submit" id="get-quote-btn" class="btn-primary float-right">New <i class="fas fa-arrow-right"></i>
+                <button type="submit" id="get-quote-btn" class="btn-primary float-right" title="Get new quote"><i class="fas fa-arrow-right"></i>
                 </button>
             </div>
         </div>
