--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="row">
             <div class="col" id="tweet-btn-container">
                 <a class="button" id="tweet-btn" title="Tweet this quote!" target="_blank">
-                    <i class="fab fa-twitter fa-2x"></i>
+                    <i class="fab fa-twitter fa-lg"></i>
                 </a>
             </div>
             <div class="col">
