Fixed google fonts link to pass HTML validation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- font awesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
     <!-- google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Tillana" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto%7CTillana" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
