Changed visual style

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Random Quote Machine</title>
-    <!-- font awesome -->
-    <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
     <!-- google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto%7CTillana" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
@@ -29,16 +28,17 @@
             <div id="author-container">
                 <p id="author"></p>
             </div>
-        </div>
-        <div class="row">
-            <div class="col" id="tweet-btn-container">
-                <a class="button" id="tweet-btn" title="Tweet this quote!" target="_blank">
-                    <i class="fab fa-twitter fa-lg"></i>
-                </a>
-            </div>
-            <div class="col">
-                <button type="submit" id="get-quote-btn" class="btn-primary float-right" title="Get new quote"><i class="fas fa-arrow-right"></i>
-                </button>
+            <div class="row button-row">
+                <div class="col-1"></div>
+                <div class="col" id="tweet-btn-container">
+                    <a class="button" id="tweet-btn" title="Tweet this quote!" target="_blank">
+                        <img src="img\twitter-4-48.ico">
+                    </a>
+                </div>
+                <div class="col"></div>
+                <div class="col">
+                    <button type="submit" id="get-quote-btn" title="Get new quote"><img src="img\right-circular-48.ico" alt="Get new quote"></button>
+                </div>
             </div>
         </div>
     </div>
