Fixed button positions

--- a/index.html
+++ b/index.html
@@ -24,19 +24,18 @@
             </div>
         </div>
         <div id="quote-container">
-            <blockquote class="blockquote blockquote-reverse" id="quote"></blockquote>
+            <blockquote class="blockquote" id="quote"></blockquote>
             <div id="author-container">
                 <p id="author"></p>
             </div>
             <div class="row button-row">
-                <div class="col-1"></div>
                 <div class="col" id="tweet-btn-container">
                     <a class="button" id="tweet-btn" title="Tweet this quote!" target="_blank">
                         <img src="img\twitter-4-48.ico">
                     </a>
                 </div>
-                <div class="col">
-                    <button type="submit" id="get-quote-btn" title="Get new quote"><img src="img\right-circular-48.ico" alt="Get new quote"></button>
+                <div class="button col text-right">
+                    <img src="img\right-circular-48.ico" title="Get new quote" alt="Get new quote">
                 </div>
             </div>
         </div>
