Fixed get new quote button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </a>
                 </div>
                 <div class="button col text-right">
-                    <img src="img\right-circular-48.ico" title="Get new quote" alt="Get new quote">
+                    <img id="get-quote-btn" src="img\right-circular-48.ico" title="Get new quote" alt="Get new quote">
                 </div>
             </div>
         </div>
