--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             <div class="row button-row">
                 <div class="col" id="tweet-btn-container">
                     <a class="button" id="tweet-btn" title="Tweet this quote!" target="_blank">
-                        <img src="img\twitter-4-48.ico">
+                        <img src="img\twitter-4-48.png">
                     </a>
                 </div>
                 <div class="button col text-right">
-                    <img id="get-quote-btn" src="img\right-circular-48.ico" title="Get new quote" alt="Get new quote">
+                    <img id="get-quote-btn" src="img\arrow-3-48.png" title="Get new quote" alt="Get new quote">
                 </div>
             </div>
         </div>
