Changed Author font

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Random Quote Machine</title>
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pinyon+Script" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
@@ -34,8 +34,10 @@
                         <img src="img\twitter-4-48.png" alt="Tweet this quote button.">
                     </a>
                 </div>
-                <div class="button col text-right">
-                    <img id="get-quote-btn" src="img\arrow-3-48.png" title="Get new quote" alt="Get new quote button.">
+                <div class="col text-right">
+                    <a class="button" title="Get new quote">
+                        <img id="get-quote-btn" src="img\arrow-3-48.png" alt="Get new quote button.">
+                    </a>
                 </div>
             </div>
         </div>
