Add initial quote

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             </div>
         </div>
         <div id="quote-container">
-            <blockquote class="blockquote" id="quote"></blockquote>
+            <blockquote class="blockquote" id="quote">"There is nothing permanent except change."</blockquote>
             <div id="author-container">
-                <p id="author"></p>
+                <p id="author">Heraclitus</p>
             </div>
             <div class="row button-row">
                 <div class="col" id="tweet-btn-container">
